--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
+
+# Bootstrap SASS tarfile & extraced folder
+bootstrap-sass-3.1.1
+v3.1.1.tar.gz
+
