--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "xml2js": "~0.4.4",
     "passport-local": "~1.0.0",
     "express-session": "~1.2.1",
-    "passport": "~0.2.0"
+    "passport": "~0.2.0",
+    "sugar": "~1.4.1",
+    "nodemailer": "~0.6.5",
+    "agenda": "~0.6.14"
   },
   "devDependencies": {
     "gulp-plumber": "~0.6.2",
