--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "passport": "~0.2.0",
     "sugar": "~1.4.1",
     "nodemailer": "~0.6.5",
-    "agenda": "~0.6.14"
+    "agenda": "~0.6.14",
+    "compression": "~1.0.6"
   },
   "devDependencies": {
     "gulp-plumber": "~0.6.2",
     "gulp": "~3.7.0",
-    "gulp-sass": "~0.7.2"
+    "gulp-sass": "~0.7.2",
+    "gulp-concat": "~2.2.0",
+    "gulp-uglify": "~0.3.0",
+    "gulp-angular-templatecache": "~1.2.0",
+    "gulp-csso": "~0.2.9"
   }
 }
