--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
-  },
+    "start": "node server.js"
+  },    
   "dependencies": {
     "express": "~4.2.0",
     "static-favicon": "~1.0.0",
@@ -34,6 +34,7 @@
     "gulp-concat": "~2.2.0",
     "gulp-uglify": "~0.3.0",
     "gulp-angular-templatecache": "~1.2.0",
-    "gulp-csso": "~0.2.9"
+    "gulp-csso": "~0.2.9",
+    "gulp-uncss": "~0.4.4"
   }
 }
