--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js"
-  },    
+  },
   "dependencies": {
     "express": "~4.2.0",
     "static-favicon": "~1.0.0",
@@ -25,7 +25,8 @@
     "sugar": "~1.4.1",
     "nodemailer": "~0.6.5",
     "agenda": "~0.6.14",
-    "compression": "~1.0.6"
+    "compression": "~1.0.6",
+    "newrelic": "~1.7.1"
   },
   "devDependencies": {
     "gulp-plumber": "~0.6.2",
